app-overflow-y fix

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body{
   font-family:sans-serif;
   font-family:'Outfit',sans-serif;
   font-style:normal;
+  overflow-y:auto;
 }
 
 .wrapper{
